2003-08-28  Matti Aarnio  <mea@zmailer.org>

	* man/man-to-html.sh:
	    Apparently we can be without 'groff -c' option, and still not
	    get colour output to produced HTML..   Oh yes, that was when
	    using '-Thtml' output driver.  Present HTML generation uses
	    '-Tascii' and magic state processor to convert produced (with 
	    occasional escapes) text file into fixed with courier font HTML.

2003-08-26  Matti Aarnio  <mea@zmailer.org>

	* proto/smtpserver.conf, smtpserver/smtpcmds.c:
	    In prototype smtpserver.conf: comment away 'localhost'
	    case with 'f' and 't' flags.  People do get surprises
	    when using those, and skipping some notes in INSTALL.
	    ALSO: Made 'enable_router' to semi-silently to control
	    even looking into router controlling flags.  If router
	    is not enabled, it is not complained about.

	* SiteConfig.in,  include/ta.h, transports/libta/ctlopen.c,
	  transports/libta/lockaddr.c, transports/mailbox/mailbox.c,
	  transports/sm/sm.c, transports/smtp/smtp.h,
	  transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Changed compile time configured  TA_USE_MMAP  feature
	    to runtime configured  ZENV variable  TA_USE_MMAP,
	    whose existence uses the thing, and nonexistence
	    does read message into limited size internal buffer...
	    ACTUALLY TESTED CODES ARE: 'mailbox' AND 'smtp'.
	    THE 'sm' IS NOT TESTED AT THIS POINT!

2003-08-25  Matti Aarnio  <mea@zmailer.org>

	* utils/makedb/makedb.c, utils/policy-builder.sh.in:
	    Code crashed in case the input wasn't like it was wanted..
	    Oops.

	* smtpserver/policytest.c, doc/guides/smtp-policy,
	  man/smtpserver.8.in, proto/db/smtp-policy.src:
	    Document editing, and at policytest.c: localizing
	    pbuf[] variable to its actual use.
	  
	* transports/smtp/smtp.c:
	    Conditionalize one ESMTP_STARTTLS referral, that
	    was added recently.

2003-08-22  Matti Aarnio  <mea@zmailer.org>

	* proto/db/smtp-policy.src:
	    Couple comments on input syntax.
